2011-02-23  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/win.trm: update and reformat windows help text

2011-02-24  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc:  sync to docs version 1.651

2011-02-24  Peter Hedwig <peter@affenbande.org>

	* term/lua/gnuplot-tikz.lua term/lua.trm:  Make full bitmap
	support conditional on HAVE_CAIROPDF.  Necessary in order to
	build lua without the cairo terminals.

2011-02-24  Hans-Bernhard Broeker <broeker@physik.rwth-aachen.de>

	* share/LaTeX/Makefile.am (${lua_files}): Missing $(top_srcdir)
	broke out-of-source-tree build.

2011-02-23  Ethan A Merritt  <merritt@u.washington.edu>

	* term/lua/gnuplot-tikz.lua term/lua/gnuplot-tikz.help:
	Fix redundant definitions that broke TeX-based documentation.

	* term/Makefile.am.in: Regenerate term/lua/gnuplot-tikz.help

2011-02-23  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: correct typos; revive some "html" anchors

2011-02-23  Bastian Maerkisch  <bmaerkisch@web.de>

	* docs/gnuplot.doc: add link from `rand` to `random` and use
	proper table format in random section

	* term/lua/gnuplot-tikz.help term/lua/gnuplot-tikz.lua: balance
	backquotes in gnuplot help.

	* src/win/wgraph.c: reorder entries of the graph popup menu

	* src/win/winmain.c(IsWindowsXPorLater) src/win/wcommon.h: add a
	function to detect if gnuplot is running on Win XP or later.

	* src/win/wtext.c(TextMakeFont) src/win/wgraph.c(Makefonts):
	select ClearType or Proof quality depending on OS version to
	improve rendering quality

2011-02-21  Peter Hedwig <peter@affenbande.org>

	* term/lua/gnuplot-tikz.help term/lua/gnuplot-tikz.lua
	term/lua/NEWS term/lua/README term/lua/TODO term/lua.trm:
	Re-work the lua terminal to support ConTeXt and plain TeX in addition
	to TikZ.  Requires TikZ >= 2.0

	* share/LaTeX/Makefile.am: Regenerate the lua terminal *.tex and *.sty
	files from the Makefile rather than keeping them in cvs.

2011-02-21  Bastian Maerkisch  <bmaerkisch@web.de>
