@@ -1,5 +1,5 @@
 # Hello, emacs: this is a -*- Makefile -*-
-# $Id: makefile.mgw,v 1.59 2011/02/21 16:17:08 markisch Exp $
+# $Id: makefile.mgw,v 1.60 2011/02/25 19:15:07 markisch Exp $
 #
 # GNUPLOT Makefile for MinGW32 on Win95/98/NT/2k/..
 # This assumes usual installation of the MinGW32 toolkit, the free
@@ -387,7 +387,7 @@ endif
 .c.o:
 	$(CC) -c $(CFLAGS) $*.c
 
-LDLIBS = -lkernel32 -lgdi32 -lwinspool -lcomdlg32 -ladvapi32 -lshell32 -ladvapi32
+LDLIBS = -lkernel32 -lgdi32 -lwinspool -lcomdlg32 -ladvapi32 -lshell32 -ladvapi32 -lmsimg32 
 
 #
 # Create config.h
